# blockchain-data-scanner

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  env.example
data/: state.json  uniswap_v3_holders.txt
src/: main.rs
